--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react": "^18",
     "react-dom": "^18",
     "styled-components": "^6.1.8",
+    "swr": "^2.2.5",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
