--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "next": "14.0.4",
     "react": "^18",
     "react-dom": "^18",
+    "recoil": "^0.7.7",
     "styled-components": "^6.1.8",
     "swr": "^2.2.5",
     "uuid": "^9.0.1"
